<?xml version="1.0"?>
<package format="3">
  <name>robot_description_pkg</name>
  <version>0.0.1</version>
  <description>URDF assets for the demo robot.</description>
  <maintainer email="jloaiz505@gmail.com">james</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
