<?xml version="1.0"?>
<package format="3">
  <name>robot_sim_pkg</name>
  <version>0.0.1</version>
  <description>C++ simulation helper nodes for joint behavior verification.</description>
  <maintainer email="james@example.com">james</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>controller_manager</depend>
  <depend>ros_gz_sim</depend>
  <depend>gz_ros2_control</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
